# LE

./: .gemini.md  .gitignore  README.md  README_APP.md  README_MCP.md  SOLUTION.md  pyproject.toml  task.md  test_models.py
.agent/skills/: crm-management.md
.agent/workflows/: DONTUSEpublish-post.md  draft-post.md  generate-ideas.md  linkedin-analytic.md  linkedin-outreach.md  refine-post.md  research-competitors.md  step-1-generate-ideas.md  step-2-draft-post.md  step-3-refine-post.md
.clinerules/: project-rules.md
.clinerules/workflows/: step-1-generate-ideas.md  step-2-draft-post.md  step-3-refine-post.md
analytics/: post_performance.md  winning_posts.md
app/: config.py  research_agent.py
content pipeline/1_ideas/: .gitkeep  2026-02-11_ai-breaks-the-pm-math.md  2026-02-11_ai-closes-pm-accountability-gap.md  2026-02-11_ai-doesnt-make-teams-faster.md  2026-02-11_ai-empowers-cognitive-professions.md  2026-02-11_estimate-ai-roi-without-fake-math.md  2026-02-11_stop-selling-ai-in-tech-language.md
content pipeline/2_drafts/: 2026-02-11_ai-breaks-the-pm-math.md  2026-02-11_ai-closes-pm-accountability-gap.md  (+4 more)
linkedin methodology/: Content Strategy.md  LinkedIn Content Playbook.md  LinkedIn Playbook.md  LinkedIn Social Selling Playbook.md
my projects/: PRD Assistant readme.md  project_insights_extraction.md  workflow_integration_guide.md
outreach/: crm.json  crm_trending.json
research/: competitor_profiles.md  pain_points.md  trending_topics.md  viral_posts.md
templates/: competitor_pattern_templates.md  image_prompts.md  post_templates.md
(+32 files in other folders)
